` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/ChildWorkflowStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title ChildWorkflow State Transitions

[*] --> CREATED
CREATED --> START_COMMAND_CREATED: SCHEDULE
STARTED --> COMPLETED: CHILD_WORKFLOW_EXECUTION_COMPLETED
STARTED --> FAILED: CHILD_WORKFLOW_EXECUTION_FAILED
STARTED --> TIMED_OUT: CHILD_WORKFLOW_EXECUTION_TIMED_OUT
STARTED --> CANCELED: CHILD_WORKFLOW_EXECUTION_CANCELED
STARTED --> TERMINATED: CHILD_WORKFLOW_EXECUTION_TERMINATED
START_COMMAND_CREATED --> START_COMMAND_CREATED: START_CHILD_WORKFLOW_EXECUTION
START_COMMAND_CREATED --> START_EVENT_RECORDED: START_CHILD_WORKFLOW_EXECUTION_INITIATED
START_COMMAND_CREATED --> CANCELED: CANCEL
START_EVENT_RECORDED --> STARTED: CHILD_WORKFLOW_EXECUTION_STARTED
START_EVENT_RECORDED --> START_FAILED: START_CHILD_WORKFLOW_EXECUTION_FAILED
START_FAILED --> [*]
COMPLETED --> [*]
FAILED --> [*]
CANCELED --> [*]
TIMED_OUT --> [*]
TERMINATED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
